crates/wdl-analysis/tests/validation/symbolic-import-requires-1-4/source.wdl
version 1.3

import openwdl/csvkit
import * from openwdl/csvkit
import { sort } from openwdl/csvkit

workflow example {}
